ex 4 img ref corret

--- a/exercicios/Ex4/style.css
+++ b/exercicios/Ex4/style.css
@@ -57,11 +57,11 @@ table{
 }
 
 input:required:invalid, input:focus:invalid, textarea:required:invalid, textarea:focus:invalid {
-    background: url("../imagens/wrong.gif") no-repeat;
+    background: url("./imagens/wrong.gif") no-repeat;
     background-position: right;
 } 
 
 input:required:valid, textarea:required:valid { 
-    background: url("../imagens/check.png") no-repeat;
+    background: url("./imagens/check.png") no-repeat;
     background-position: right;
 } 
