modal final com timeout + tela de artistas

--- a/exercicios/07_exercicio_JSON/public/css/mystyle.css
+++ b/exercicios/07_exercicio_JSON/public/css/mystyle.css
@@ -19,3 +19,7 @@
     padding: 8%;
     background: linear-gradient(90deg, #000000 0%, #1E3A7E 100%);
 }
+
+.backzin {
+    background: linear-gradient(90deg, #000000 0%, #1E3A7E 100%);
+}
